--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/touch/icon-180.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KODKAFA WEB APP TEMPLATE</title>
+    <title>KODKAFA PWA TEMPLATE</title>
   </head>
   <body>
     <div id="root"></div>
